etc/k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: pili
      tier: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: pili
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: registry.pilosus.org/pilosus/pili-nginx
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
      imagePullSecrets:
        - name: registry-credentials
