etc/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: pili
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  #type: NodePort
  type: LoadBalancer
