etc/k8s/pili-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pili
  labels:
    app: pili
spec:
  # comment the following line if you want to use a LoadBalancer
  #type: NodePort
  # if your cluster supports it, uncomment the following line to automatically create
  # an external load-balanced IP for the frontend service
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: uwsgi
  selector:
    app: pili
    tier: backend
